--- a/package.json
+++ b/package.json
@@ -8,8 +8,17 @@
     "start": "next start"
   },
   "dependencies": {
+    "classnames": "^2.2.6",
+    "date-fns": "^2.14.0",
+    "gray-matter": "^4.0.2",
     "next": "9.3.5",
+    "postcss-flexbugs-fixes": "^4.2.1",
+    "postcss-preset-env": "^6.7.0",
     "react": "16.13.1",
-    "react-dom": "16.13.1"
+    "react-dom": "16.13.1",
+    "remark": "^12.0.0",
+    "remark-html": "^11.0.2",
+    "sass": "^1.26.8",
+    "tailwindcss": "^1.4.6"
   }
 }
